--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
   <script src="./assets/index.js"></script>
   <!-- fontawsome cdn -->
   <script src="https://kit.fontawesome.com/91232b44e6.js" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
   <title>React App</title>
 </head>
 
