--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,22 @@
   <!-- fontawsome cdn -->
   <script src="https://kit.fontawesome.com/91232b44e6.js" crossorigin="anonymous"></script>
 
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
   <title>React App</title>
 </head>
+<style>
+  body {
+    overflow: hidden;
+  }
 
-<body class="bg-dark">
+
+</style>
+
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" ></div>
+  <div id="root"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
